Fix box stacking on smaller screens

--- a/ckanext/edawax/theme/changes.css
+++ b/ckanext/edawax/theme/changes.css
@@ -1528,7 +1528,7 @@ h1 {
 }
 
 #field-sitewide-search::placeholder {
-    color: #d0e0ec;
+    color: white;
     font-size: 20px;
     padding-left: 5px;
     padding-right: 0px;
@@ -1548,7 +1548,7 @@ section.related_publication,
 .primary > article > .module-content > div > div,
 .primary > article > .module-content > div > h1,
 .primary > article > .module-content > div > section#dataset-resources{
-    padding-left: 25px;
+    /*padding-left: 25px;*/
 }
 
 .primary > article > .module-content > div > section:last-of-type {
@@ -1556,7 +1556,7 @@ section.related_publication,
 }
 
 .primary > article > .module-content > div > section:last-of-type > .tag_section {
-    padding-left: 25px;
+    /*padding-left: 25px;*/
 }
 
 .module-content.box.intro {
